Fix overflow

--- a/assets/sass/pages/_stack.scss
+++ b/assets/sass/pages/_stack.scss
@@ -102,6 +102,14 @@
   }
 }
 
+@media only screen and (min-width: $breakpoint-big) {
+  
+  #wax {
+    margin-left: 5rem;
+    transform: scale(1.3);
+  }
+}
+
 @media only screen and (min-width: $breakpoint-big-2) {
   #solana {
     margin-left: 10rem;
